...
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#000000"
            android:text="Register"
            android:textColor="#FFFFFF"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Already a member? Login"
            android:textSize="16dp" />
...
